# s2fetch

./: .gitignore  BUILD.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
src/s2fetch/: __init__.py  bands.py  cloudmask.py  fetch.py  patches.py  providers.py
tests/: test_smoke.py
