[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "s2fetch"
version = "0.1.0"
description = "Standalone Sentinel-2 L2A acquisition utility: AOI + date window -> cloud-masked xarray, provider-swappable STAC backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Paul Peshette" }]
keywords = ["sentinel-2", "stac", "remote-sensing", "earth-observation", "odc-stac"]
dependencies = [
    "numpy",
    "rasterio",
    "rioxarray",
    "shapely",
    "pyproj",
    "geopandas",
    "xarray",
    "dask",
    "pystac-client>=0.7",
    "odc-stac>=0.3.9",
    "planetary-computer>=1.0",
    "boto3",
    "tqdm",
    "pytest"
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
